--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,3 @@
-/* ⚠️ CSS optimized for the tutorial, not for expanding to a larger site. ⚠️ */
-
 *,
 *::before,
 *::after {
@@ -20,6 +18,7 @@ svg {
 
 :root {
   /* fonts */
+  --fs-100: clamp(0.65rem, calc(0.63rem + 0.25vw), 0.72rem);
   --fs-200: clamp(0.78rem, calc(0.71rem + 0.35vw), 0.96rem);
   --fs-300: clamp(0.94rem, calc(0.84rem + 0.51vw), 1.2rem);
   --fs-400: clamp(1.13rem, calc(0.98rem + 0.73vw), 1.5rem);
@@ -29,13 +28,17 @@ svg {
   --lh-1-1: 1.1;
   --lh-1-4: 1.4;
 
-  /* colors */
-  --accent: 183 74% 44%;
-  --bkg: 190 60% 98%;
-  --text: 185 26% 9%;
-  --muted: 183 8% 55%;
+  /* colors in HSL*/ 
+  --accent: 173 58% 39%;
+  --lighter: hsla(20, 60%, 16%, 0.5);;
+  --bkg: 38 100% 98%;
+  --cardBkg: 0 0% 100%;
+  --text : 20 60% 16%;
+  --muted: 20 60% 16%;
   --light: 180 14% 85%;
   --warning: 4 66% 63%;
+
+  /* Useful link: https://www.w3schools.com/colors/colors_converter.asp */
 
   /* utils */
   --space-xs: 8px;
@@ -53,7 +56,8 @@ svg {
   /* toast customizations */
   --toastify-color-success: hsl(var(--accent));
   --toastify-font-family: 'M PLUS Rounded 1c', sans-serif;
-  --toastify-font-size: var(--fs-200);
+  /* --toastify-font-size: var(--fs-200); */
+  --toastify-font-size: var(--fs-100) !important;
 }
 
 body {
@@ -110,6 +114,10 @@ p {
 }
 
 /* color utils */
+
+.textReducedOpacity {
+  color: rgb(65, 33, 16, 0.45);
+}
 
 .accent {
   color: hsl(var(--accent));
@@ -346,7 +354,7 @@ select {
   width: 100%;
   font: inherit;
   font-size: var(--fs-300);
-  background-color: hsl(var(--bkg));
+  background-color: hsl(var(--cardBkg));
   border: 2px solid hsl(var(--muted));
   border-radius: var(--round-sm);
   padding: var(--space-xs) var(--space-sm);
@@ -371,8 +379,8 @@ select {
   box-shadow: 0 0 0 1px hsl(var(--accent));
 }
 
-/* Intro */
-.intro {
+/* Landing Page */
+.landing {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -392,18 +400,19 @@ select {
   gap: var(--space-lg);
 }
 
-.intro div {
+.landing div {
   display: -ms-grid;
   display: grid;
   gap: var(--space-sm);
-  max-width: var(--content-sm);
+  /* max-width: var(--content-sm); */
 }
 
-.intro form {
+.landing form {
   display: -ms-grid;
   display: grid;
   gap: var(--space-sm);
-  max-width: 25ch;
+  /* max-width: 25ch; */
+  max-width: 35ch;
 }
 
 /* dashboard */
@@ -425,15 +434,16 @@ select {
   display: -ms-grid;
   display: grid;
   gap: var(--space-sm);
-  background-color: var(--bkg);
+  /* background-color: var(--cardBkg); */
+  background-color: white;
   padding: var(--space-xl);
   border-radius: var(--round-lg);
   -webkit-box-shadow: 0.25em 0.3em 1em hsl(var(--muted) / 0.2);
   box-shadow: 0.25em 0.3em 1em hsl(var(--muted) / 0.2);
-  border-top: 0.15em solid white;
-  border-left: 0.15em solid white;
-  border-right: 0.15em solid hsl(var(--bkg));
-  border-bottom: 0.15em solid hsl(var(--bkg));
+  border-top: 0.25em solid #432211;
+  border-left: 0.25em solid #432211;
+  border-right: 0.25em solid #432211;
+  border-bottom: 0.25em solid #432211;
 }
 
 .form-wrapper::before {
