Update: Added a new function of creating either a budget plan or savings plan, instead of just having it as a budget planner.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -465,7 +465,7 @@ select {
   transform: scale(1.03);
 }
 
-.budget-date {
+.plan-date {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
