--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,7 +33,7 @@ svg {
   --lighter: hsla(20, 60%, 16%, 0.5);;
   --bkg: 38 100% 98%;
   --cardBkg: 0 0% 100%;
-  --text : 20 60% 16%;
+  --text : 20 60% 16%; /* #412110 */
   --muted: 20 60% 16%;
   --light: 180 14% 85%;
   --warning: 4 66% 63%;
@@ -357,7 +357,7 @@ select {
   border: 2px solid hsl(var(--muted));
   border-radius: var(--round-sm);
   padding: var(--space-xs) var(--space-sm);
-  height: 100%;
+  height: 98%;
   -webkit-transition: -webkit-box-shadow 300ms
     cubic-bezier(0.075, 0.82, 0.165, 1);
   transition: -webkit-box-shadow 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -503,7 +503,7 @@ select {
   transform: scale(1.03);
 }
 
-.plan-date {
+.form-flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
