Update: CashU Version 1 to deploy.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,8 +29,8 @@ svg {
   --lh-1-4: 1.4;
 
   /* colors in HSL*/ 
-  --accent: 173 58% 39%;
-  --lighter: hsla(20, 60%, 16%, 0.5);;
+  --accent: 173 58% 39%; /* #2a9d90 */
+  --lighter: hsla(20, 60%, 16%, 0.5);
   --bkg: 38 100% 98%;
   --cardBkg: 0 0% 100%;
   --text : 20 60% 16%; /* #412110 */
