--- a/client/src/index.css
+++ b/client/src/index.css
@@ -156,6 +156,8 @@ p {
   box-shadow: 0 0 0 3px hsl(var(--bkg)), 0 0 0 6px var(--backdrop);
 }
 
+/* Styling for all buttons */
+
 :where(.btn) {
   --color: hsl(var(--bkg));
   background-color: var(--backdrop);
@@ -211,6 +213,36 @@ p {
 
 .btn[disabled] {
   opacity: 0.5;
+}
+
+
+.calculator-btn{
+  --color: hsl(var(--text));
+  --backdrop: hsl(var(--accent));
+  border: transparent;
+  padding: 0.5ch;
+  font: inherit;
+  color: var(--color);
+  border-radius: var(--round-sm);
+  -webkit-transition: -webkit-box-shadow 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  transition: -webkit-box-shadow 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  -o-transition: box-shadow 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  -webkit-transition: -webkit-box-shadow 300ms
+    cubic-bezier(0.075, 0.82, 0.165, 1);
+  transition: box-shadow 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  transition: box-shadow 300ms cubic-bezier(0.075, 0.82, 0.165, 1),
+    -webkit-box-shadow 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  transition: box-shadow 300ms cubic-bezier(0.075, 0.82, 0.165, 1),
+    -webkit-box-shadow 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.calculator-btn:focus {
+  outline: none;
+}
+
+.calculator-btn:is(:hover, :focus-visible) {
+  -webkit-box-shadow: 0 0 0 3px hsl(var(--bkg)), 0 0 0 6px var(--backdrop);
+  box-shadow: 0 0 0 3px hsl(var(--bkg)), 0 0 0 6px var(--backdrop);
 }
 
 /* utility layouts */
@@ -462,6 +494,20 @@ select {
   width: 100%;
 }
 
+.dashboardHeading{
+  /* display: flex; */
+  justify-content: space-between;
+  /* align-items: baseline; */
+}
+
+.dashboardHeading h1{
+  margin: 0;
+}
+
+.dashboardHeading h3{
+  margin: 0;
+}
+
 .introText {
   margin-bottom: 20px;
   margin-left: 10px;
@@ -684,4 +730,93 @@ table a {
 /* toast */
 .Toastify__toast-body {
   font-size: var(--fs-300);
+}
+
+/* Calculator */
+.calculatorWrapper {
+  position: absolute;
+  z-index: 100;
+  position: fixed;
+
+  right: -2ch; /* Start from outside the window */
+  transition: all 0.5s ease-in-out; /* Transition duration and timing function */
+  opacity: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+
+  width: 21ch;
+  height: 35ch;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #485461;
+  background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);
+
+  box-shadow: 2px 12px 24px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0 12px 24px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0 12px 24px rgba(0, 0, 0, 0.5);
+}
+
+.calculatorWrapper.visible{
+  right: 2ch;
+  opacity: 1;
+}
+
+.calculatorWrapper.hidden {
+  right: -20ch;
+  opacity: 0;
+}
+
+.calculatorScreen {
+  height: 100px;
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 0 10px;
+  background-color: #4357692d;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  color: white;
+  font-weight: bold;
+  box-sizing: border-box;
+  font-family: 'Quicksand', sans-serif;
+}
+
+.calculatorButtonBox{
+  width: 100%;
+  height: calc(100% - 110px);
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-gap: 10px;
+  border-radius: 10px;
+}
+
+.calculatorButtons {
+  border: none;
+  background-color: hsl(var(--accent));
+  font-size: 24px;
+  color: hsl(var(--light));
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 10px;
+  outline: none;
+  font-family: 'Quicksand', sans-serif;
+}
+
+.calculatorButtons:hover {
+  background-color: #1b786d;
+}
+
+.equals {
+  grid-column: 3 / 5;
+  background-color: hsl(var(--light));
+  border-radius: 10px;
+  border: none;
+  outline: none;
+}
+
+.equals:hover {
+  background-color: #b9c2c2;
 }
