--- a/client/src/index.css
+++ b/client/src/index.css
@@ -293,6 +293,8 @@ p {
   min-height: 100vh;
   -ms-grid-rows: auto 1fr auto;
   grid-template-rows: auto 1fr auto;
+
+  margin-top: calc(3 * var(--space-lg)); /* To give margin for the NavBar */
 }
 
 .layout > img {
@@ -310,7 +312,7 @@ main {
 }
 
 /* navbar */
-nav {
+.navbar {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -324,9 +326,20 @@ nav {
   padding: var(--space-md);
   max-width: 1500px;
   margin-inline: auto;
+  position: fixed;
+  z-index: 999;
+
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
-nav a {
+.navbar.navbar-hidden {
+  transform: translateY(-100%);
+  transition: transform 0.5s ease-in-out;
+}
+
+.navbar a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -340,11 +353,11 @@ nav a {
 }
 
 @media screen and (max-width: 525px) {
-  nav a span {
+  .navbar a span {
     display: none;
   }
 
-  nav button span {
+  .navbar button span {
     display: none;
   }
 }
@@ -377,11 +390,33 @@ input {
     -webkit-box-shadow 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
+:is(input):focus {
+  outline: none;
+  border-color: hsl(var(--accent));
+  -webkit-box-shadow: 0 0 0 1px hsl(var(--accent));
+  box-shadow: 0 0 0 1px hsl(var(--accent));
+}
+
 select {
   width: 100%;
   font: inherit;
   font-size: var(--fs-300);
   background-color: hsl(var(--cardBkg));
+
+  background-image:
+    linear-gradient(45deg, transparent 50%, gray 50%),
+    linear-gradient(135deg, gray 50%, transparent 50%),
+    linear-gradient(to right, #ccc, #ccc);
+  background-position:
+    calc(100% - 20px) 50%, /* Half Left side of arrow */
+    calc(100% - 15px) 50%, /* Half Right side of arrow */
+    calc(100% - 3.5ch) 50%; /* Vertical Line position */
+  background-size:
+    5px 5px,
+    5px 5px,
+    1px 1.5em;
+  background-repeat: no-repeat;
+
   border: 2px solid hsl(var(--muted));
   border-radius: var(--round-sm);
   padding: var(--space-xs) var(--space-sm);
@@ -397,13 +432,35 @@ select {
     -webkit-box-shadow 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
   transition: box-shadow 300ms cubic-bezier(0.075, 0.82, 0.165, 1),
     -webkit-box-shadow 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
-:is(input, select):focus {
+:is(select):focus{
   outline: none;
   border-color: hsl(var(--accent));
   -webkit-box-shadow: 0 0 0 1px hsl(var(--accent));
   box-shadow: 0 0 0 1px hsl(var(--accent));
+
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+
+  background-image:
+    linear-gradient(45deg, hsl(var(--accent)) 50%, transparent 50%),
+    linear-gradient(135deg, transparent 50%, hsl(var(--accent)) 50%),
+    linear-gradient(to right, #ccc, #ccc);
+  background-position:
+    calc(100% - 15px) 50%, /* Half Right side of arrow */
+    calc(100% - 20px) 50%, /* Half Left side of arrow */
+    calc(100% - 3.5ch) 50%; /* Vertical Line position */
+  background-size:
+    5px 5px,
+    5px 5px,
+    1px 1.5em;
+  background-repeat: no-repeat;
 }
 
 /* Landing Page */
@@ -759,6 +816,7 @@ table a {
 .calculatorWrapper.hidden {
   right: -20ch;
   opacity: 0;
+  transform: translateY(100%);
 }
 
 .calculatorScreen {
@@ -815,16 +873,9 @@ table a {
   background-color: #b9c2c2;
 }
 
+
 /* About Us Page styling */
 .about-us {
-  /* max-width: 800px;
-  margin: 0 auto;
-  padding: 20px; */
-  /* display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  margin: 2ch; */
 
   display: -webkit-box;
   display: -ms-flexbox;
