--- a/client/src/index.css
+++ b/client/src/index.css
@@ -402,6 +402,7 @@ select {
   font: inherit;
   font-size: var(--fs-300);
   background-color: hsl(var(--cardBkg));
+  color: black;
 
   background-image:
     linear-gradient(45deg, transparent 50%, gray 50%),
