--- a/client/src/index.css
+++ b/client/src/index.css
@@ -188,6 +188,10 @@ p {
   --backdrop: hsl(var(--text));
 }
 
+:where(.btn--calculator) {
+  --backdrop: #1d6c63;
+}
+
 :where(.btn--outline) {
   background-color: var(--color);
   color: var(--backdrop);
@@ -207,6 +211,16 @@ p {
 }
 
 :where(.btn--warning):is(:hover, :focus-visible) {
+  --backdrop: hsl(var(--warning));
+  --color: hsl(var(--bkg));
+}
+
+:where(.btn--paid) {
+  --backdrop: hsl(var(--warning));
+  border: 2px solid hsl(var(--warning));
+}
+
+:where(.btn--paid):is(:hover, :focus-visible) {
   --backdrop: hsl(var(--warning));
   --color: hsl(var(--bkg));
 }
@@ -489,6 +503,7 @@ select {
   text-decoration: underline;
 }
 
+
 .floating { 
   animation-name: floating;
   animation-duration: 4s;
@@ -642,6 +657,7 @@ select {
   flex: 1 1 32.2%;
   /* max-width: 600px; */
   max-width: 680px;
+  min-width: 300px;
   -webkit-box-shadow: 0.25em 0.3em 1em hsl(var(--muted) / 0.2);
   box-shadow: 0.25em 0.3em 1em hsl(var(--muted) / 0.2);
   background-color: white;
@@ -743,11 +759,24 @@ table {
   width: 100%;
 }
 
-/* Colour for each odd row of the table*/
+@media screen and (max-width: 925px) {
+  table {
+    width: 900px;
+  }
+}
+
+@media screen and (max-width: 525px) {
+  table {
+    width: 780px;
+  }
+}
+
+/* Colour for each odd row of the table */
 tr:nth-child(odd) {
   background-color: hsl(var(--text) / 0.1);
 }
 
+/* Colour for each even row of the table */
 tr:nth-child(even) {
   background-color: hsl(var(--text) / 0.02);
 }
@@ -759,6 +788,7 @@ td {
 
 thead > tr:nth-child(odd) {
   background-color: hsl(var(--bkg));
+  font-size: var(--fs-300);
 }
 
 td,
@@ -793,9 +823,8 @@ table a {
   right: -20ch; /* Start from outside the window */
   transition: all 0.5s ease-in-out; /* Transition duration and timing function */
   opacity: 0;
-  top: 0;
+  top: 10ch;
   bottom: 0;
-  margin: auto;
 
   width: 21ch;
   height: 35ch;
