--- a/client/src/index.css
+++ b/client/src/index.css
@@ -342,6 +342,8 @@ main {
   margin-inline: auto;
   position: fixed;
   z-index: 999;
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
 
   top: 0;
   left: 0;
