--- a/client/src/index.css
+++ b/client/src/index.css
@@ -709,7 +709,9 @@ select {
   /* color: hsl(173 58% 39%); */
 }
 
-progress {
+/* Progress bar styling */
+
+.progressBar {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -718,25 +720,26 @@ progress {
   height: var(--space-sm);
   border-radius: 100vmax;
   overflow: hidden;
-  -webkit-transition: all 500ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  /* -webkit-transition: all 500ms cubic-bezier(0.075, 0.82, 0.165, 1);
   -o-transition: all 500ms cubic-bezier(0.075, 0.82, 0.165, 1);
-  transition: all 500ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  transition: all 500ms cubic-bezier(0.075, 0.82, 0.165, 1); */
 }
 
-progress[value]::-webkit-progress-bar {
+.progressBar[value]::-webkit-progress-bar {
   background-color: hsl(var(--light));
 }
 
-progress[value]::-moz-progress-bar {
+.progressBar[value]::-moz-progress-bar {
   -moz-transition: all 500ms cubic-bezier(0.075, 0.82, 0.165, 1);
   transition: all 500ms cubic-bezier(0.075, 0.82, 0.165, 1);
   background-color: hsl(var(--backdrop));
 }
 
-progress[value]::-webkit-progress-value {
+.progressBar[value]::-webkit-progress-value {
   background-color: hsl(var(--backdrop));
   -webkit-transition: all 500ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
+
 
 /* error pages */
 .error {
