--- a/client/src/index.css
+++ b/client/src/index.css
@@ -711,7 +711,7 @@ select {
 
 /* Progress bar styling */
 
-.progressBar {
+progress {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -725,17 +725,17 @@ select {
   transition: all 500ms cubic-bezier(0.075, 0.82, 0.165, 1); */
 }
 
-.progressBar[value]::-webkit-progress-bar {
+progress[value]::-webkit-progress-bar {
   background-color: hsl(var(--light));
 }
 
-.progressBar[value]::-moz-progress-bar {
+progress[value]::-moz-progress-bar {
   -moz-transition: all 500ms cubic-bezier(0.075, 0.82, 0.165, 1);
   transition: all 500ms cubic-bezier(0.075, 0.82, 0.165, 1);
   background-color: hsl(var(--backdrop));
 }
 
-.progressBar[value]::-webkit-progress-value {
+progress[value]::-webkit-progress-value {
   background-color: hsl(var(--backdrop));
   -webkit-transition: all 500ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
